<resources>
    <string name="app_name">TravelSouvenire</string>
    <string name="login_register">Login</string>
    <string name="password_register">Password</string>
    <string name="singin_register">Sing In</string>
    <string name="register_register">You dont have account? Register</string>
    <string name="nav_home">home</string>
    <string name="nav_add">add</string>
    <string name="nav_profile">profile</string>
    <string name="country_add">Country</string>
    <string name="city_add">City</string>
    <string name="desription_add">Description</string>
    <string name="upload_photo_add">Upload Photo</string>
    <string name="add_add">Add</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
