<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_home"
        android:enabled="true"
        android:title="@string/nav_home"
        android:icon="@drawable/baseline_home_black_18dp" />
    <item android:id="@+id/action_search"
        android:enabled="true"
        android:title="search"
        android:icon="@drawable/baseline_search_black_18dp"
        />
    <item android:id="@+id/action_add"
        android:enabled="true"
        android:title="@string/nav_add"
        android:icon="@drawable/outline_add_box_black_18dp" />
    <item android:id="@+id/action_profile"
        android:enabled="true"
        android:title="@string/nav_profile"
        android:icon="@drawable/outline_person_black_18dp" />

</menu>